feat: marketing.html, privacy-policy.html

--- a/support/index.html
+++ b/support/index.html
@@ -132,6 +132,20 @@
             </div>
         </section>
 
+        <section class="faq">
+            <h2>Policies and Marketing</h2>
+            <div class="faq-item">
+                <h3>Privacy Policy</h3>
+                <p>Read how data is processed and how third-party services are used.</p>
+                <p><a href="./privacy-policy.html">Open privacy policy page</a></p>
+            </div>
+            <div class="faq-item">
+                <h3>Marketing Page</h3>
+                <p>See app features, supported languages, and product overview.</p>
+                <p><a href="./marketing.html">Open marketing page</a></p>
+            </div>
+        </section>
+
         <div class="footer">
             © 2026 SRT Flow
         </div>
